# gopnik

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  MANUAL_API.md  MANUAL_CLI.md  MANUAL_WEB.md  NETLIFY_DEPLOYMENT.md  PUBLISHING.md  PYPI_SETUP_COMPLETE_GUIDE.md  PYPI_SETUP_QUICK_REFERENCE.md  QUICK_PAT_FIX.md  README.md  README_DEVELOPMENT.md  SCENARIOS.md  SETUP_CHECKLIST.md  _redirects  index.html  netlify.toml  package.json  pat-validation.txt  pyproject.toml  requirements.txt  setup.py  vercel.json  wiki-status.json
.github/: WORKFLOW_STATUS.md
config/: versions.yaml  web_status.json
docs/: NETLIFY_DEPLOYMENT.md  conf.py  faq.md  index.md  requirements.txt
netlify/: requirements.txt
profiles/: default.yaml
scripts/: build-netlify-simple.py  build-netlify.py  deploy-netlify.sh  force-wiki-sync.sh  setup-wiki.sh  test-pat-token.sh  validate_setup.py
src/: __init__.py
tests/: __init__.py  run_comprehensive_tests.py  test_ai_integration.py  test_api_app.py  test_api_processing_endpoints.py  test_api_profile_validation_endpoints.py  test_audit_logger.py  test_audit_models.py  test_cli_api_command.py  test_cli_base_command.py  test_cli_main.py  test_cli_processing_integration.py  test_cli_profile_command.py  test_cli_validate_command.py  test_comprehensive_unit_coverage.py  test_coverage_analysis.py  test_crypto_utils.py  test_cv_engine.py  test_document_analyzer.py  test_document_processor.py  test_hybrid_engine.py  test_logger.py  (+17 more)
(+46 files in other folders)
